2005-01-20  Brian Kahne  <bkahne@ibmoto.com>

	* Re-wrote how alt works:  It no longer uses a handle.  Instead, a
	thread goes asleep and when it wakes, it jumps back to the
	checking logic.  This was done to fix a subtle bug with prialt:
	If two channels become ready at the same time, the priorities
	should be obeyed even if the lower priority thread is what wakes
	the channel.  Using the handle, it wasn't possible to ensure
	this.  The handle is still there, but will be removed next.

	* Added chan25 to test the prialt issue mentioned above.

        ======= plasma release 0.8.9 (v0_8_9) on Linux (cde-tx32-ldt189) =======

2005-01-17  Brian Kahne  <bkahne@ibmoto.com>

	* Changed the clear() functions- they simply do a get() if ready()
	is true.  This was because the other behavior of clear() could
	lead to non-deterministic behavior and runaway conditions.

	* Added a zero-size capability to clocked channels and made this
	the default size.  If the size is 0, a write will block until a
	read removes the data.  This lets you do a fully interlocked
	pipeline.

	* Fixed a bug with priorities- terminate now adds all waiters,
	then queries for the next ready thread.  This fixes a problem
	whereby we used to get the next ready thread before adding the
	waiters which could result in us executing a lower-priority thread
	before others of higher priority.
	
        ======= plasma release 0.8.8 (v0_8_8) on Linux (cde-tx32-ldt189) =======

2005-01-04  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug with pLowestPriority(): It was returning 0, rather
	than the 1 less than the total number of priorities (which is the
	lowest priority from the user's point of view).  Modified pri2 to
	test this.

        ======= plasma release 0.8.7 (v0_8_7) on Linux (cde-tx32-ldt189) =======

2004-12-22  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug:  We could get a crash if we tried accessing the
	current priority from a global constructor because the current